k8s/shell.yaml
apiVersion: v1
kind: Pod
metadata:
  name: shell
  namespace: demaf
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                  - k8s-cluster3-7
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - mountPath: /mnt/data/rabbitmq/data
          name: rabbitmq-data-storage
        - mountPath: /mnt/data/rabbitmq/logs
          name: rabbitmq-logs-storage
        - mountPath: /mnt/data/demaf
          name: demaf-storage
        - mountPath: /mnt/data/winery
          name: winery-storage
  volumes:
    - name: rabbitmq-data-storage
      persistentVolumeClaim:
        claimName: rabbitmq-data-pvc
    - name: rabbitmq-logs-storage
      persistentVolumeClaim:
        claimName: rabbitmq-logs-pvc
    - name: demaf-storage
      persistentVolumeClaim:
        claimName: demaf-pvc
    - name: winery-storage
      persistentVolumeClaim:
        claimName: winery-pvc
