k8s/tmp.yaml
apiVersion: v1
kind: Pod
metadata:
  name: shell
  namespace: demaf
spec:
  containers:
    - name: nginx
      image: nginx
      volumeMounts:
        - mountPath: /mnt/data/rabbitmq/data
          name: rabbitmq-data-storage
        - mountPath: /mnt/data/rabbitmq/logs
          name: rabbitmq-logs-storage
        - mountPath: /mnt/data/demaf
          name: demaf-storage
        - mountPath: /mnt/data/winery
          name: winery-storage
  volumes:
    - name: rabbitmq-data-storage
      persistentVolumeClaim:
        claimName: rabbitmq-data-pvc
    - name: rabbitmq-logs-storage
      persistentVolumeClaim:
        claimName: rabbitmq-logs-pvc
    - name: demaf-storage
      persistentVolumeClaim:
        claimName: demaf-pvc
    - name: winery-storage
      persistentVolumeClaim:
        claimName: winery-pvc
  hostNetwork: true
  dnsPolicy: Default
---
