k8s/deployment-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demaf
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: demaf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3.9-management
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "500m"
              memory: "1.5Gi"
            limits:
              cpu: "2"
              memory: "4Gi"
          ports:
            - containerPort: 5672
            - containerPort: 15672
          volumeMounts:
            - name: rabbitmq-data
              mountPath: /var/lib/rabbitmq
            - name: rabbitmq-logs
              mountPath: /var/log/rabbitmq
          livenessProbe:
            exec:
              command:
                - rabbitmqctl
                - status
            initialDelaySeconds: 60
            failureThreshold: 3
            periodSeconds: 60
            timeoutSeconds: 15
      hostname: demaf-rabbitmq
      restartPolicy: Always
      volumes:
        - name: rabbitmq-data
          persistentVolumeClaim:
            claimName: rabbitmq-data-pvc
        - name: rabbitmq-logs
          persistentVolumeClaim:
            claimName: rabbitmq-logs-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: demaf
spec:
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: management
      protocol: TCP
      port: 15672
      targetPort: 15672
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modelsdatabase
  namespace: demaf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modelsdatabase
  template:
    metadata:
      labels:
        app: modelsdatabase
    spec:
      containers:
        - name: modelsdatabase
          image: mongo:5.0.6
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
              cpu: "4"
              memory: "8Gi"
          ports:
            - containerPort: 27017
          livenessProbe:
            exec:
              command:
                - mongo
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 60
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 15
      hostname: modelsdatabase
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: modelsdatabase
  namespace: demaf
spec:
  selector:
    app: modelsdatabase
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: configurationsdatabase
  namespace: demaf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: configurationsdatabase
  template:
    metadata:
      labels:
        app: configurationsdatabase
    spec:
      containers:
        - name: configurationsdatabase
          image: postgres:14.2
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
              cpu: "4"
              memory: "8Gi"
          ports:
            - containerPort: 5432
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - tad
                - -d
                - configurations
            initialDelaySeconds: 60
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 15
      hostname: configurationsdatabase
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: configurationsdatabase
  namespace: demaf
spec:
  selector:
    app: configurationsdatabase
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasksdatabase
  namespace: demaf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasksdatabase
  template:
    metadata:
      labels:
        app: tasksdatabase
    spec:
      containers:
        - name: tasksdatabase
          image: postgres:14.2
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
              cpu: "4"
              memory: "8Gi"
          ports:
            - containerPort: 5432
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - tad
                - -d
                - tasks
            initialDelaySeconds: 60
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 15
      hostname: tasksdatabase
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: tasksdatabase
  namespace: demaf
spec:
  selector:
    app: tasksdatabase
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analysismanager
  namespace: demaf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: analysismanager
  template:
    metadata:
      labels:
        app: analysismanager
    spec:
      containers:
        - name: analysismanager
          image: ghcr.io/ust-demaf/analysis-manager:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "2"
              memory: "2Gi"
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 15
      hostname: analysismanager
      restartPolicy: Always
      volumes:
        - name: demaf
          persistentVolumeClaim:
            claimName: demaf-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: analysismanager
  namespace: demaf
spec:
  selector:
    app: analysismanager
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modelsservice
  namespace: demaf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: modelsservice
  template:
    metadata:
      labels:
        app: modelsservice
    spec:
      containers:
        - name: modelsservice
          image: ghcr.io/ust-demaf/models-service:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "1.5Gi"
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: demaf
              mountPath: /usr/share
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8081
            initialDelaySeconds: 60
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 15
      hostname: modelsservice
      restartPolicy: Always
      volumes:
        - name: demaf
          persistentVolumeClaim:
            claimName: demaf-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: modelsservice
  namespace: demaf
spec:
  selector:
    app: modelsservice
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: winery
  namespace: demaf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: winery
  template:
    metadata:
      labels:
        app: winery
    spec:
      containers:
        - name: winery
          image: opentosca/radon-gmt:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "2"
              memory: "4Gi"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: winery
              mountPath: /var/repository
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 15
      hostname: winery
      restartPolicy: Always
      volumes:
        - name: winery
          persistentVolumeClaim:
            claimName: winery-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: winery
  namespace: demaf
spec:
  selector:
    app: winery
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bashplugin
  namespace: demaf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bashplugin
  template:
    metadata:
      labels:
        app: bashplugin
    spec:
      containers:
        - name: bashplugin
          image: ghcr.io/ust-demaf/bash-plugin:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "1.5Gi"
          ports:
            - containerPort: 8083
          volumeMounts:
            - name: demaf
              mountPath: /usr/share
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8083
            initialDelaySeconds: 60
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 15
      hostname: bashplugin
      restartPolicy: Always
      volumes:
        - name: demaf
          persistentVolumeClaim:
            claimName: demaf-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: bashplugin
  namespace: demaf
spec:
  selector:
    app: bashplugin
  ports:
    - protocol: TCP
      port: 8083
      targetPort: 8083
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: terraformplugin
  namespace: demaf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: terraformplugin
  template:
    metadata:
      labels:
        app: terraformplugin
    spec:
      containers:
        - name: terraformplugin
          image: ghcr.io/ust-demaf/terraform-mps-plugin:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "2"
              memory: "4Gi"
          ports:
            - containerPort: 8084
          volumeMounts:
            - name: demaf
              mountPath: /usr/share
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8084
            initialDelaySeconds: 60
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 15
      hostname: terraformplugin
      restartPolicy: Always
      volumes:
        - name: demaf
          persistentVolumeClaim:
            claimName: demaf-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: terraformplugin
  namespace: demaf
spec:
  selector:
    app: terraformplugin
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetesplugin
  namespace: demaf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubernetesplugin
  template:
    metadata:
      labels:
        app: kubernetesplugin
    spec:
      containers:
        - name: kubernetesplugin
          image: ghcr.io/ust-demaf/kubernetes-mps-plugin:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "2"
              memory: "4Gi"
          ports:
            - containerPort: 8085
          volumeMounts:
            - name: demaf
              mountPath: /usr/share
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8085
            initialDelaySeconds: 60
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 15
      hostname: kubernetesplugin
      restartPolicy: Always
      volumes:
        - name: demaf
          persistentVolumeClaim:
            claimName: demaf-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetesplugin
  namespace: demaf
spec:
  selector:
    app: kubernetesplugin
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helmplugin
  namespace: demaf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helmplugin
  template:
    metadata:
      labels:
        app: helmplugin
    spec:
      containers:
        - name: helmplugin
          image: ghcr.io/ust-demaf/helm-plugin:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "1.5Gi"
          ports:
            - containerPort: 8086
          volumeMounts:
            - name: demaf
              mountPath: /usr/share
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8086
            initialDelaySeconds: 60
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 15
      hostname: helmplugin
      restartPolicy: Always
      volumes:
        - name: demaf
          persistentVolumeClaim:
            claimName: demaf-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: helmplugin
  namespace: demaf
spec:
  selector:
    app: helmplugin
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 8086
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ansibleplugin
  namespace: demaf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ansibleplugin
  template:
    metadata:
      labels:
        app: ansibleplugin
    spec:
      containers:
        - name: ansibleplugin
          image: ghcr.io/ust-demaf/ansible-mps-plugin:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "2"
              memory: "4Gi"
          ports:
            - containerPort: 8087
          volumeMounts:
            - name: demaf
              mountPath: /usr/share
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8087
            initialDelaySeconds: 60
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 15
      hostname: ansibleplugin
      restartPolicy: Always
      volumes:
        - name: demaf
          persistentVolumeClaim:
            claimName: demaf-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: ansibleplugin
  namespace: demaf
spec:
  selector:
    app: ansibleplugin
  ports:
    - protocol: TCP
      port: 8087
      targetPort: 8087
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dockerplugin
  namespace: demaf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dockerplugin
  template:
    metadata:
      labels:
        app: dockerplugin
    spec:
      containers:
        - name: dockerplugin
          image: ghcr.io/ust-demaf/docker-plugin:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "1"
              memory: "1.5Gi"
          ports:
            - containerPort: 8089
          volumeMounts:
            - name: demaf
              mountPath: /usr/share
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8089
            initialDelaySeconds: 60
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 15
      hostname: dockerplugin
      restartPolicy: Always
      volumes:
        - name: demaf
          persistentVolumeClaim:
            claimName: demaf-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: dockerplugin
  namespace: demaf
spec:
  selector:
    app: dockerplugin
  ports:
    - protocol: TCP
      port: 8089
      targetPort: 8089
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visualizationservice
  namespace: demaf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: visualizationservice
  template:
    metadata:
      labels:
        app: visualizationservice
    spec:
      containers:
        - name: visualizationservice
          image: ghcr.io/ust-demaf/visualization-service:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          ports:
            - containerPort: 8082
          volumeMounts:
            - name: demaf
              mountPath: /usr/share
            - name: winery
              mountPath: /var/repository
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8082
            initialDelaySeconds: 60
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 15
      hostname: visualizationservice
      restartPolicy: Always
      volumes:
        - name: demaf
          persistentVolumeClaim:
            claimName: demaf-pvc
        - name: winery
          persistentVolumeClaim:
            claimName: winery-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: visualizationservice
  namespace: demaf
spec:
  selector:
    app: visualizationservice
  ports:
    - protocol: TCP
      port: 8082
      targetPort: 8082
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-ui
  namespace: demaf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-ui
  template:
    metadata:
      labels:
        app: web-ui
    spec:
      containers:
        - name: web-ui
          image: ghcr.io/ust-demaf/web-ui:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
          ports:
            - containerPort: 8079
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /
              port: 8079
            initialDelaySeconds: 60
            failureThreshold: 3
            periodSeconds: 10
            timeoutSeconds: 15
      hostname: web-ui
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: web-ui
  namespace: demaf
spec:
  selector:
    app: web-ui
  ports:
    - name: frontend
      protocol: TCP
      port: 8079
      targetPort: 8079
    - name: backend
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ui-ingress
  namespace: demaf
spec:
  tls:
    - hosts:
        - ust.demaf.de
      secretName: demaf-secret-tls
  rules:
    - host: ust.demaf.de
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: web-ui
                port: 
                  number: 8079
